@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.sorozatok_net" name="Sorozatok.net" version="1.0.5" provider-name="heg, vargalex">
+<addon id="plugin.video.sorozatok_net" name="Sorozatok.net" version="1.0.6" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -16,6 +16,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 
+			1.0.6 - video link quote_plus fix
 			1.0.5 - borítók forrásának lekövetése, új video linkek kezelése
 			1.0.4 - borítók forrásának lekövetése
 			1.0.3 - img_url, quote_plus fix
